# happy_predictions

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  Readme.md  docker-compose.yml  flake.nix  mypy.ini  pyproject.toml  requirements.in  requirements.txt
app/: const.py  env.py
app/bot/: dispatcher.py
app/config/: dotenv.py  gunicorn.py  predictions.py
app/database/: crud.py  get.py  scheme.py
app/script/: fire.py  manage.py
app/server/: asgi.py  events.py  routes.py
assets/: 2021_drive.csv  2021_n.csv  2022_drive.csv  2023_drive.csv  2025_drive.csv  2026_drive.csv
happy_predictions/: admin_service.py  asgi.py  const.py  env.py  factories.py  factory_types.py  provide_depends.py  telegram_admin_handlers.py  telegram_handlers.py  telegram_main_handlers.py  telegram_webhook.py  utils.py  webhook.py
happy_predictions/predictor/: assets_manager.py  image_generation.py  lru_cache.py  predictor.py
happy_predictions/service_provider/: partial_function_resolve.py  service_factory.py  service_provider.py  types.py
happy_predictions/services/: predictions.py
happy_predictions/services/storage/: models.py  storage.py
happy_predictions/storage/: models.py  storage.py
happy_predictions/telegram/: fix_telegram_types.py  provided_handlers.py  provided_handlers_types.py  resolve_handler_callback.py  telegram_service.py
test/config/: test_dotenv.py
tests/: conftest.py  test_lru_cache_dict.py
tests/test_app/: conftest.py  test_start_command.py
tests/test_service_container/: test_service_container.py
(+8 files in other folders)
